--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package": "asar pack MasterKey-darwin-x64/MasterKey.app/Contents/Resources/app MasterKey-darwin-x64/MasterKey.app/Contents/Resources/app.asar && rm -rf MasterKey-darwin-x64/MasterKey.app/Contents/Resources/app",
-    "build": "electron-packager . MasterKey && cp MK-C.icns MasterKey-darwin-x64/MasterKey.app/Contents/Resources/electron.icns"
+    "package-mac": "electron-packager . --overwrite --asar=true --platform=darwin --arch=x64 --icon=icons/MK-C.icns --prune=true --out=release-builds",
+    "package-linux" : "electron-packager . --overwrite --asar=true --platform=linux --arch=x64 --icon=icons/MK-C.png --prune=true --out=release-builds",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icons/MK-C.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Master Key App\""
   },
   "author": "Team1",
   "license": "MIT",
