--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk 
+
 # Logs
 logs
 *.log
@@ -58,6 +85,6 @@ typings/
 .env
 
 #build of electron
-release-builds/*
-!release-builds/.gitkeep
+dist/*
+!dist/.gitkeep
 
