--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "package-mac": "electron-packager . --overwrite --asar=true --platform=darwin --arch=x64 --icon=build/icon.icns --prune=true --out=dist",
     "package-linux": "electron-packager . --overwrite --asar=true --platform=linux --arch=x64 --prune=true --out=dist",
     "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=x64 --icon=build/icon.ico --prune=true --out=dist --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Master Key App\"",
-    "pack": "electron-builder --dir",
+    "pack-w": "electron-builder --win",
+    "dist-all": "electron-builder -mwl",
     "dist": "electron-builder"
   },
   "build": {
-    "appId": "com.team1.MK",    
+    "appId": "com.team1.MK",
     "dmg": {
       "contents": [
         {
@@ -36,13 +37,14 @@
       ]
     },
     "win": {
-      "target": "portable",
+      "target": "nsis",
       "icon": "build/icon.ico"
     }
   },
   "devDependencies": {
+    "7zip-bin-mac": "^1.0.1",
     "asar": "^0.13.0",
-    "electron": "^1.6.11",    
+    "electron": "^1.6.11",
     "electron-builder": "^19.8.0",
     "electron-packager": "^8.7.2"
   }
